[metadata]

name = Nsubjettiness
description = Nsubjettiness FastJet contrib library
author = Jesse Thaler, Ken Van Tilburg, Christopher K. Vermilion, TJ Wilkason
author_email = jthaler@mit.edu
maintainer = Patrick Komiske
maintainer_email = pkomiske@mit.edu
license = GPLv2
license_file = COPYING
long_description = file: README
long_description_content_type = text/plain
url = https://fastjet.hepforge.org/contrib/
keywords =
    nsubjettiness
    njettiness
    axes
    measure
    jet
    substructure

[options]

packages = find:
zip_safe = False
python_requires =
    >= 2.7
